--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,8 +1,8 @@
-@use 'vars';
 @use '../node_modules/reset-css/sass/reset';
+@use 'vars';
 
 :root {
-  --font-size: $font-size;
+  --font-size: #{vars.$font-size};
   --color-text: #333;
 }
 
