--- a/pug/layouts/default.pug
+++ b/pug/layouts/default.pug
@@ -21,10 +21,10 @@ head
   meta(property='og:site_name', content='')
   meta(property='og:image', content='')
   meta(property='og:locale', content='ja_JP')
-  
+
   // OGP Facebook
   meta(property='fb:app_id', content='')
-  
+
   // OGP Twitter
   meta(name='twitter:card', content='')
   meta(name='twitter:site', content='')
@@ -32,17 +32,18 @@ head
   meta(name='twitter:title', content='')
   meta(name='twitter:description', content='')
   meta(name='twitter:image', content='')
-  
+
   // Google Fonts
   link(rel='preconnect', href='https://fonts.googleapis.com')
   link(rel='preconnect', href='https://fonts.gstatic.com', crossorigin='')
   link(href='https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap', rel='stylesheet')
-  
+
   // CSS
   link(rel='stylesheet', href='/css/style.css')
-  
+
   // JS Libraries
   script(src='https://code.jquery.com/jquery-1.12.4.min.js')
+
 
 // Header//
 header
@@ -56,5 +57,7 @@ main
 footer
   block footer
 
+// Javascript Modules
+script(src='/js/modules/module.js', type='module')
 // Javascript
-script(src='/js/script.js')
+script(src='/js/script.js', type='module')
